# spurt

./: .gitignore  CMakeLists.txt  README.md  obj2alg.py
boundary-aware-rectgrid/: CMakeLists.txt  boundaryAwareRectGrid.cpp  boundaryAwareRectGrid.h  point.h  triangle_list.h
crease/: CMakeLists.txt  crease.cpp  crease.hpp  crease2.hpp  crease_extraction.hpp  crease_extractor.cpp  crease_extractor.hpp  crease_mc_cases.hpp  crease_surface.cpp  crease_surface_v2.cpp  creaseline.cpp  creaseline.hpp  creaseline2d.cpp  creaseline2d.hpp  creaseline3d.hpp  extractor.cpp  extractor.hpp  face.cpp  face.hpp  filter_crease.cpp  filter_degenerate_lines.cpp  gH_filtered_sspace_selection.cpp  gH_sspace_selection.cpp  grid.hpp  measure_wrapper.cpp  measure_wrapper.hpp  multires_peikert.cpp  new_creaseline.hpp  newton_search.hpp  old.schultz.cpp  parallel_schultz.cpp  peikert.cpp  peikert2.cpp  peikert_sadlo.cpp  peikert_sadlo.hpp  peikert_sadlo_height_ridge_2008.py  pvo.cpp  pvo.hpp  ridge.cpp  schultz.cpp  (+6 more)
data/: CMakeLists.txt  Terminal Saved Output  __field_wrapper.hpp  adaptive_mesh.hpp  adaptive_quad_mesh.hpp  amr.hpp  differential_image.hpp  edge.hpp  field_wrapper.hpp  grid.hpp  heap.hpp  id_set.hpp  image.hpp  index_shifter.hpp  indexed_point.hpp  kdtree.hpp  locator.hpp  mesh.hpp  metric.hpp  newAMR.hpp  old_raster.hpp  pointload.cpp  pointwise_jacobian.cpp  probabilistic_sampling.cpp  quadtree.hpp  raster.hpp  raster_data.hpp  raster_grid.hpp  raster_new.hpp  smooth.cpp  sparse_mesh.hpp  test_heap  test_heap.cpp  test_image.cpp  test_locator.cpp  tree.hpp  vtk_field.hpp
flow/: ABC_ftle.cpp  CMakeLists.txt  abc.cpp  best-scale.cpp  catseye.cpp  color_ftle.cpp  debug.cpp  doublegyre.cpp  flow_map.cpp  flow_map_new.cpp  flow_map_unstructured.cpp  flow_map_vtk.cpp  flowmap_in_3D_nrrd.cpp  ftle.cpp  ftle.hpp  ftle.sh  ftle2d.sh  ftle_rhs.hpp  generate_flow.cpp  generate_seeds.cpp  lavd-vel_only.cpp  lavd.cpp  lavd.hpp  lavd_intp.cpp  lavd_multi.cpp  lavd_new.cpp  lavd_new.hpp  lavd_postintg.cpp  ode_observer.hpp  parse_lavd_header.cpp  tangent_lines.cpp  tensor_ftle.cpp  tensor_ftle_over_range.cpp  tensor_ftle_progressive.cpp  tensor_ftle_v1.1.cpp  tensor_ftle_v1.2.cpp  test_upsample.cpp  time_dependent_2d_flow_map_multi_step.cpp  time_dependent_field.hpp  time_dependent_flow_map.cpp  (+12 more)
format/: CMakeLists.txt  DLRreader.hpp  NCOM2nrrd.cpp  NCOMreader.hpp  avtNek5000FileFormat.cpp  avtNek5000FileFormat.hpp  dlr2vtk.cpp  dlr2vtk.hpp  dlr_reader.hpp  filename.hpp  lammps2nrrd.sh  make_rectilinear_grid.cpp  matlab2nrrd.cpp  matlab_io.hpp  nc2vtk-triangles.cpp  ncio.hpp  nek5000reader.hpp  nek5000toNRRD.cpp  nek5000toVTK.cpp  nek5000tonetcdf.cpp  nrrd2vtk.cpp  png_io.hpp  pvm2nrrd.cpp  read_lammps.cpp  read_lammps.hpp  read_nathan_poincare.hpp  read_sparse.cpp  read_sparse.hpp  reorder_float_tagged_filenames.cpp  test_filesystem.cpp  vtk2nrrd.cpp  vtk2obj.cpp  vtk2xml.cpp
geometry/: CMakeLists.txt  add_shear_stress.cpp  boundary_extraction.cpp  boundary_extraction.hpp  boundary_extraction.hpp.save  boundary_extraction.hpp.save.1212  grain-stat.cpp  m3c.cpp  m3c_v1.1.cpp  m3c_v1.2.cpp  refine_mesh.cpp  tetrahedrization.hpp  voxel_to_grain_stats.cpp  voxel_to_grains.cpp
granular/: CHAOS_34.cpp  CMakeLists.txt  MLSinterpolation.cpp  boundary.hpp  contacts.cpp  coord2col.cpp  dem.cpp  dem.hpp  dem_utils.hpp  denis-approx.cpp  denis-oa.cpp  denis-orbitalaveraging.cpp  denis.cpp  denis.hpp  density2D.cpp  discrete_holmes.cpp  discrete_holmes_LIC.cpp  force_chain.cpp  force_chain.hpp  granular_visualize.cpp  layers.cpp  layers2col.cpp  lowest.cpp  nameparser.cpp  nate.tar.bz2  neighbors.hpp  nrrd2txt.cpp  particleFTLE.cpp  particles.hpp  pour-1.cpp  pour.cpp  show_particle_poincare.cpp  slicer.cpp  sparse_matrix.hpp  test_location.cpp  txt2nrrd.cpp  view_particles_ftle.cpp  visualize.cpp  volumeFTLE.cpp  voro2nrrd.cpp  (+2 more)
image/: .gdb_history  CMakeLists.txt  assess_ridge.cpp  connect_curves.cpp  convert.hpp  crease.hpp  crease_extraction.hpp  crease_extractor.cpp  crease_extractor.hpp  creaseline.hpp  creaseline2d.cpp  creaseline2d.hpp  creaseline3d.cpp  creaseline3d.hpp  eigen.hpp  integrate.cpp  integrate.hpp  new_creaseline.cpp  new_creaseline.hpp  nrrd_dynamic_manip.hpp  nrrd_field.hpp  nrrd_linalg.cpp.exclude  nrrd_manip.hpp  nrrd_matrix_manip.hpp  nrrd_static_manip.hpp  nrrd_stats.cpp  nrrd_wrapper.hpp  probe.cpp  probe.hpp  probe2.cpp  probe2.hpp  ridge.cpp  ridges.cpp  sinus.cpp  test.cpp  test_creaseline2d.cpp  test_nrrd_manip.cpp  unux.cpp  unux.template.cpp
learning/: CMakeLists.txt  isomap.hpp  multidimensional_scaling.hpp  test_isomap.cpp  test_tapkee.cpp
maps/: CMakeLists.txt  IO.hpp  adaptive_map_sampling.cpp  adaptive_triangulation.hpp  basic_definitions.cpp  basic_definitions.hpp  clipping_plane.py  cohen_sutherland.hpp  map4d.cpp  map4d.py  old.test.cpp  old.triangulation.hpp  period.hpp  q-based-fixed-points.cpp  q-based-fixedpoint-search.cpp  q-profile-fast.cpp  q-profile-period-specific.cpp  q-version-1.0.cpp  q-version-1.1.cpp  quality_control.hpp  regular_mesh.hpp  sample_map.cpp  sampling.hpp  symplectic4d.cpp  symplectic4d.hpp  temporary.hpp  test.cpp  tokatopo.cpp  tokatopo.hpp  tokatopo_hybrid.cpp  tokatopo_triangulation_based.cpp  triangulation.hpp  visualize4d.py
maps_lib/: CMakeLists.txt  IO.hpp  adaptive_map_sampling.cpp  adaptive_map_sampling.hpp  adaptive_map_sampling_03.24.2010.cpp  adaptive_map_sampling_03.25.2010.cpp  adaptive_map_sampling_03.29.2010.cpp  adaptive_map_sampling_03.30.2010.cpp  adaptive_map_sampling_03.31.2010.cpp  adaptive_map_sampling_exp.cpp  adaptive_map_sampling_pthreads.cpp  adaptive_triangulation.hpp  analysis.cpp  analyze_stdmap.cpp  approx_analysis.cpp  approximation.hpp  chain.hpp  definitions.cpp  definitions.hpp  display.hpp  experimental.hpp  find_fixed_points.hpp  fixpoints.hpp  ftle_tokamak_fast.cpp  ftle_tokamak_incremental.cpp  ftlevals2cols.cpp  functors.hpp  h52nrrd.cpp  hdf2nrrd.cpp  index.hpp  interval.hpp  invariant_manifold.hpp  logical2physical.hpp  manifold.hpp  map_analysis.cpp  map_analysis.cpp.orig.orig  (+41 more)
(+440 files in other folders)
